Revision history for File::Gettext

          - Adjusted toolchain for Github
          - Added diagnostic to test since
            f3a3dae7-6bf7-1014-bf26-fc13b95c3ac1

0.24.1    2014-07-05 10:35:52
          - Replace namespace::sweep with namespace::autoclean
          - Resultset::create now returns object not id
          - Replaced ::Result::_resultset with result_source

0.23.1    2014-05-17 13:16:29
          - 39fc0b7c-6bf6-1014-8e34-bbd22f9ba488 Test::Requires Hash::MoreUtils
          - Removed Ident and Version lines
          - Fixed unwanted SEP bug in ::Storage::PO::make_key

0.22.1    2014-01-01 15:29:44
          - Uses default exception error stings for NothingUpdated
          - Tests select storage class since JSON is now the default

0.21.1    2013-09-29 02:08:24
          - Function merge_hash_data rename merge_file_data

0.20.0    2013-08-15 18:14:56
          - Switched to Dist::Zilla