@@ -2,6 +2,7 @@ blib/
 .build/
 _build/
 cover_db/
+.directory
 Build
 !Build/
 Build.bat
@@ -9,7 +10,6 @@ Build.bat
 LICENSE
 Makefile
 Makefile.old
-MANIFEST
 MANIFEST.bak
 META.json
 META.yml
@@ -19,4 +19,6 @@ nytprof.out
 pm_to_blib
 README
 README.pod
+t/ipc_srlock*
+*.tar.gz
 File-Gettext*
