@@ -1,0 +1,29 @@
+Build.PL
+Changes
+LICENSE
+MANIFEST
+META.json
+META.yml
+README
+SIGNATURE
+lib/File/Gettext.pm
+lib/File/Gettext/Constants.pm
+lib/File/Gettext/ResultSource.pm
+lib/File/Gettext/Schema.pm
+lib/File/Gettext/Storage.pm
+lib/File/Gettext/Storage/MO.pm
+lib/File/Gettext/Storage/PO.pm
+t/01always_pass.t
+t/02pod.t
+t/03podcoverage.t
+t/05kwalitee.t
+t/06yaml.t
+t/07podspelling.t
+t/10test_script.t
+t/20with-language.t
+t/default.json
+t/existing.mo
+t/existing.po
+t/locale/de/LC_MESSAGES/file1
+t/locale/en/LC_MESSAGES/file1
+t/messages.po
